Phase 9: Query DSL & Pagination
- Added limit, offset, and orderBy support to SelectEntity, SelectRaw, and SelectJoin.
- Updated Dialect interface and implementations with limitOffsetSyntax.
- Enhanced SelectJoin.Builder with type-safe on(Column, Column) method.
- Added Table reference to Column class to support type-safe metadata access.
- Verified pagination and sorting via PaginationTest.java.